.on overlaping css fixed

--- a/src/components/AlgoBtn/fullScreenBtn.css
+++ b/src/components/AlgoBtn/fullScreenBtn.css
@@ -13,7 +13,7 @@
   clip-path: polygon(84% 0%, 84% 28%, 28% 28%, 28% 84%, 0% 84%, 0% 0%);
   -webkit-clip-path: polygon(84% 0%, 84% 28%, 28% 28%, 28% 84%, 0% 84%, 0% 0%);
 }
-.on{
+.corner.on{
   clip-path: polygon(56% 0%, 84% 0%, 84% 84%, 0% 84%, 0% 56%, 56% 56%);
   -webkit-clip-path: polygon(56% 0%, 84% 0%, 84% 84%, 0% 84%, 0% 56%, 56% 56%);
 }
