--- a/src/components/LangToggler/langToggler.css
+++ b/src/components/LangToggler/langToggler.css
@@ -24,7 +24,7 @@ h4{
 h4:first-child{
   margin-right: auto;
 }
-.on{
+h4.on{
   color: #71EE36;
   text-shadow: 0 0 0.8rem #71EE36;
 }
